--- a/content/post/决策树为什么要引入随机数.md
+++ b/content/post/决策树为什么要引入随机数.md
@@ -2,6 +2,7 @@
 categories:
 - 机器学习
 date: 2018-09-01 14:40:52+0000
+description: 最近在使用scikit-learn的决策树的时候发现每次生成的树都不一样。发现决策树里面的有个random_state的参数，但是没想明白为什么会有这么个参数。
 draft: false
 math: null
 tags:
