--- a/content/post/决策树实现.md
+++ b/content/post/决策树实现.md
@@ -1,6 +1,7 @@
 ---
 categories: null
 date: 2018-09-13 21:40:03+0000
+description: 最近给本科生当助教，出了一道实现决策树的题，还有一个预剪枝的题，自己也顺便实现一下。
 draft: false
 math: null
 tags: null
