--- a/content/post/博客重装.md
+++ b/content/post/博客重装.md
@@ -2,6 +2,7 @@
 categories:
 - software
 date: 2020-05-14 12:00:28+0000
+description: 最近又重装了一下系统，之前博客是在Windows下面的，最近我把那个Windows系统删了，先在OSX上面用一段时间。但是发现整个博客的程序近乎报废，图片加载不了，公式显示不了。。。然后开始一步一步修理。
 draft: false
 math: null
 tags:
