--- a/content/post/复杂网络基础.md
+++ b/content/post/复杂网络基础.md
@@ -2,6 +2,8 @@
 categories:
 - 随笔
 date: 2018-07-21 18:10:09+0000
+description: 觉得最近应该把复杂网络的基础知识捡一捡，去年上课虽然学过，不过基本都忘了，什么betweeness，都不知道是什么了。最近要做复杂网络方面的研究，这些知识是必需的。打算看一下Newman的书"Networks
+  an Introduction"。
 draft: false
 math: null
 tags:
