--- a/content/post/归并排序改进.md
+++ b/content/post/归并排序改进.md
@@ -2,6 +2,7 @@
 categories:
 - algorithms
 date: 2019-02-04 15:46:31+0000
+description: 最近在看coursera上面普林斯顿大学的算法课，关于归并排序有三点改进方法。
 draft: false
 math: null
 tags:
