--- a/content/post/训练神经网络时归一化的目的.md
+++ b/content/post/训练神经网络时归一化的目的.md
@@ -2,6 +2,7 @@
 categories:
 - 机器学习
 date: 2018-02-21 13:39:35+0000
+description: 在训练神经网络的时候，normalization是必不可少的，原因是如果不进行normalization，在更新参数的时候会出现zig zag的现象。
 draft: false
 math: true
 tags:
