--- a/content/post/门控卷积网络语言建模.md
+++ b/content/post/门控卷积网络语言建模.md
@@ -2,6 +2,8 @@
 categories:
 - 论文阅读笔记
 date: 2018-05-23 10:54:44+0000
+description: ICML 2017，大体思路：卷积+一个线性门控单元，替代了传统的RNN进行language modeling，后来的Facebook将这个用于机器翻译，提出了卷积版的seq2seq模型。原文链接：[Language
+  Modeling with Gated Convolutional Networks](https://arxiv.org/abs/1612.08083)
 draft: false
 math: true
 tags:
