--- a/content/post/复杂网络基础.md
+++ b/content/post/复杂网络基础.md
@@ -24,8 +24,8 @@ title: 复杂网络基础
 
 **一些网络的例子**
 
-![Figure1](/images/复杂网络基础/Fig1.1.JPG)
-![Figure1](/images/复杂网络基础/Fig1.1-2.JPG)
+![Figure1](/blog/images/复杂网络基础/Fig1.1.JPG)
+![Figure1](/blog/images/复杂网络基础/Fig1.1-2.JPG)
 最出名的且广泛研究的网络之一就是好论文。计算机组成的网络，计算机是顶点，物理数据连接是边，如光纤或电话线。图1.1展示了互联网的结构，2003年的一个snapshot，通过数据包的流通构建的网络。尽管互联网是人工制造的，而且是很细致的工程，但是我们并不知道它的结构是什么，因为它是由很多不同的人群构建出来的，大家并不了解其他人的行动，很少有中央控制。
 
 有很多令人激动的实用原因让我们想研究因特网的结构。因特网的功能是在不同地方的计算机之间传播数据，他们会将数据分成片或包，然后再网络中的顶点间传送，直到这些包到达他们的目的地。网络的结构会影响他们完成这些任务的效率，而且如果我们直到网络的结构，我们可以解决很多实际问题。我们应该选择哪个路由来传输数据？最短路径总是最快的吗？如果不是，怎么才能找到最快的？我们怎么避免bottleneck使流量阻塞？当一个顶点或一条边挂掉时会发生什么？等等问题。
