--- a/content/post/门控卷积网络语言建模.md
+++ b/content/post/门控卷积网络语言建模.md
@@ -32,7 +32,7 @@ $$P(w\_0, ..., w\_N) = P(w\_0)\prod^N\_{i=1}P(w\_i \mid w\_0, ..., w\_{i-1})$$
 ## 方法
 在这篇文章中我们引入了一种新的神经语言模型，这种模型使用门控时间卷积替代了使用在循环神经网络中使用的循环链接。神经语言模型（Bengio et al., 2003）提供了一种对每个单词$w\_0, ..., w\_N$的上下文表示$H=[h\_0, ..., h\_N]$用来预测下一个词的概率$P(w\_i \mid h\_i)$。循环神经网络$f$通过一个循环函数$h\_i = f(h\_{i-1}, w\_{i-1})$计算$H$，这个循环函数本质上是一种不能并行处理的序列操作。
 我们提出的方法使用函数$f$对输入进行卷积来获得$H = f \ast w$并且因此没有时间上的依赖，所以它能更好的在句子中的单词上并行计算。这个过程将会把许多前面出现的单词作为一个函数进行计算。对比卷积神经网络，上下文的大小是有限的，但是我们展示出了有限的上下文大小不是必须的，而且我们的模型可以表示足够大的上下文并表现的很好。
-![Fig1](/images/门控卷积网络语言建模/Fig1.PNG)
+![Fig1](/blog/images/门控卷积网络语言建模/Fig1.PNG)
 图1展示了模型的架构。词通过一个嵌入的向量进行表示，这些表示存储在lookup table$\mathbf{D}^{\vert \mathcal{V} \vert \times e}$中，其中$\vert \mathcal{V} \vert$是词库中单词的数量，$e$是嵌入的大小。我们模型的输入是一个词序列$w\_0, ..., w\_N$，这个序列被词向量表示为$E = [D\_{w\_0}, ..., D\_{w\_N}]$。我们将隐藏层$h\_0, ..., h\_L$计算为
 $$h\_l(X) = (X \ast W + b) \otimes \sigma(X \ast V + c)$$
 其中，$m$，$n$分别是输入和输出的feature map的数量，$k$是patch size，$X \in \mathbb{R}^{N \times m}$是层$h\_l$的输入（要么是词嵌入，要么是前一层的输出）,$W \in \mathbb{R}^{k \times m \times n}$，$b \in \mathbb{R}^n$，$V \in \mathbb{R}^{k \times m \times n}$，$c \in \mathbb{R}^n$是学习到的参数，$\sigma$是sigmoid function，$\otimes$是矩阵间的element-wise product。
