--- a/content/post/博客重装.md
+++ b/content/post/博客重装.md
@@ -66,7 +66,7 @@ title: 博客重装...
                 desc = '"' + desc + '"'
             if ' ' in pic_name:
                 pic_name = '"' + pic_name + '"'
-            target_str = '{![{}](/images/博客重装/{})}'.format(pic_name, desc)
+            target_str = '{![{}](/blog/images/博客重装/{})}'.format(pic_name, desc)
             content = content.replace(original_str, target_str)
             print(fname, original_str, target_str)
         
